# Glare

./: .dockerignore  .gitignore  .oxfmtrc.json  .oxlintrc.json  Caddyfile  README.md  bts.jsonc  package.json  podman-compose.yml  turbo.json
.github/workflows/: ci.yml  docker-images.yml  worker-release.yml
apps/docs/: package.json
apps/docs/app/: global.css
apps/docs/app/(home)/: page.tsx
apps/docs/app/docs/[[...slug]]/: page.tsx
apps/docs/components/ai/: page-actions.tsx
apps/docs/content/docs/: api-reference.mdx  architecture.mdx  getting-started.mdx  index.mdx  meta.json  operations.mdx  troubleshooting.mdx  worker-backup-execution.mdx
apps/docs/lib/: layout.shared.tsx
apps/server/: Dockerfile  package.json  tsconfig.json  tsdown.config.ts
apps/server/src/: index.ts
apps/server/src/modules/admin/: index.ts
apps/server/src/shared/: audit-log.ts  backup-metrics.ts  logger.ts  notifications.ts  snapshot-sync.ts  startup-health.ts  storage-usage.ts
apps/web/: .env.example  Dockerfile  components.json  next.config.ts  package.json
apps/web/src/: index.css
apps/web/src/app/: layout.tsx
apps/web/src/components/: header.tsx  login-page-client.tsx  mode-toggle.tsx  providers.tsx  settings-shell.tsx  sign-in-form.tsx  sign-up-form.tsx  user-menu.tsx
apps/web/src/lib/: api-base-url.ts  api-fetch.ts  auth-client.ts  format-bytes.ts  query-client.ts  require-admin-user.ts  require-auth-user.ts  server-session.ts  toast.ts
apps/worker/: Cargo.toml  Dockerfile
apps/worker/installer/: install.sh
apps/worker/src/: main.rs
(+84 files in other folders)
