[package]
name = "worker"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.1"
reqwest = { version = "0.12.14", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread", "net", "time"] }
chrono = { version = "0.4.40", features = ["clock"] }
